# funnylog2

./: README.md  publish.sh  pyproject.toml
funnylog2/: __init__.py  __version__.py  config.py
tests/: test.py
